--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "^5.0.0",
