--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+
+      <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyCW1FqlKC6wuezYauPKC0wtLjOSPHiSoyY" />
+        
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
