--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-redux": "^9.2.0"
